# flowith-claude-proxy

./: .env.example  .gitignore  AGENTS.md  AGENT_BOUNDARIES.md  CHANGELOG.md  Dockerfile  LICENSE  MEMORY.md  README.md  clean.bat  docker-compose.yml  pyproject.toml  requirements.txt  start-codex.bat  start-hermes.bat  start.bat  start.ps1  start.sh
.codex/skills/github-commit-guidelines/: SKILL.md
.codex/skills/github-commit-guidelines/agents/: openai.yaml
.codex/skills/hermes-proxy-compat/: SKILL.md
.codex/skills/hermes-proxy-compat/agents/: openai.yaml
.codex/skills/llm-proxy-streaming/: SKILL.md
.github/workflows/: ci.yml
claude-proxy/: .env.example  .gitignore  ARCHITECTURE.md  CC_SWITCH_GUIDE.md  CHEATSHEET.md  COMPARISON.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  codex-5.6-model-catalog.json  codex-flowith-8788.config.toml  docker-compose.yml  requirements.txt  start-codex.bat  start-hermes.bat  start.bat  start.sh  test_proxy.py  使用说明.md
claude-proxy/proxy/: __init__.py  __main__.py  adapter.py  config.py  server.py  upstream.py
claude-proxy/proxy/codex/: __init__.py  router.py
claude-proxy/scripts/: smoke_hermes.ps1
claude-proxy/tests/: test_codex_reasoning_repro.py  test_codex_reasoning_shapes.py  test_config.py  test_dashboard.py  test_launcher.py  test_openai_proxy.py  test_tool_bridge.py  test_upstream_stability.py
docs/: USAGE.zh-CN.md
flowith_claude_proxy/: __init__.py  __main__.py  adapter.py  config.py  flowith_client.py  server.py
memory/: working.md
scripts/: clean.ps1
tests/: test_adapter.py  test_server.py
(+1 files in other folders)
