[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flowith-claude-proxy"
version = "0.1.0"
description = "Anthropic Claude-compatible API proxy for Flowith. Lets Claude Code / cc-switch use Flowith models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "requests>=2.28.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-dotenv>=1.0",
]

[project.scripts]
flowith-claude-proxy = "flowith_claude_proxy.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flowith_claude_proxy*"]
